--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -39,7 +39,7 @@
       </ion-col>
       <ion-col col-4>
         <div style="text-align: center;font-size: 22px;color: red">
-          <ion-icon name="game-controller-b"></ion-icon>
+          <ion-icon name="game-controller-b" (click)="enterDailyQuest()"></ion-icon>
         </div>
         <div style="text-align: center">Daily Quest</div>
       </ion-col>
